--- a/.github/ISSUE_TEMPLATE/remove.yml
+++ b/.github/ISSUE_TEMPLATE/remove.yml
@@ -1,12 +1,12 @@
 name: 🗑️ Remove
 description: 불필요한 파일/코드 제거
 title: "🗑️ Remove: "
-labels: ["Remove"]
+labels: ["🗑️ Remove"]
 body:
   - type: input
     id: branch
     attributes:
-      label: 브랜치 이름
+      label: 📍 브랜치 이름
       description: 작업할 브랜치 이름을 명확하게 작성해주세요 예) remove/
       placeholder: 예) remove/
     validations:
@@ -14,10 +14,10 @@ body:
   - type: input
     id: summary
     attributes:
-      label: 삭제 내용 요약
+      label: ✨ 삭제 내용 요약
       placeholder: 어떤 코드를 삭제하나요?
   - type: textarea
     id: details
     attributes:
-      label: 상세 설명
+      label: ✏️ 상세 설명
       description: 왜 삭제되었는지, 의존성이 있는 모듈이 있는지 등을 작성해주세요.
