--- a/.github/ISSUE_TEMPLATE/add.yml
+++ b/.github/ISSUE_TEMPLATE/add.yml
@@ -1,12 +1,12 @@
 name: 📦 Add
 description: 새로운 파일이나 패키지 추가할 때
 title: "📦 Add: "
-labels: ["📦 Add"]
+labels: ["Add"]
 body:
   - type: input
     id: branch
     attributes:
-      label: 📍 브랜치 이름
+      label: 브랜치 이름
       description: 작업할 브랜치 이름을 명확하게 작성해주세요 예) add/
       placeholder: 예) add/
     validations:
@@ -14,10 +14,9 @@ body:
   - type: input
     id: summary
     attributes:
-      label: ✨ 간단 요약
+      label: 간단 요약
       placeholder: 어떤 파일/패키지를 추가하나요?
   - type: textarea
     id: details
     attributes:
-      label: ✏️ 상세 설명
-      placeholder: 자세한 설명을 적어주세요
+      label: 세부 설명
